# preyuv

./: .gitignore  CMakeLists.txt  README.md  main.cpp  make.sh  run.sh
src/: deal.cpp  deal.h  direader.cpp  direader.h
