CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(Convert LANGUAGES CXX)

FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
FILE(GLOB SRC_HEAD ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)
FILE(COPY ${SRC_HEAD} DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/src)
FILE(GLOB SRC_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)

ADD_SUBDIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/libyuv ${CMAKE_CURRENT_BINARY_DIR}/libyuv)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/libyuv/include)
FILE(COPY ${CMAKE_CURRENT_SOURCE_DIR}/libyuv/include DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/libyuv)
LINK_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/libyuv)

ADD_EXECUTABLE(${PROJECT_NAME} main.cpp ${SRC_SOURCE})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OpenCV_LIBS} yuv)